# agentparty

./: CONTRIBUTING.md  README.md  README.zh.md  install-desktop.sh  package.json
.github/: pull_request_template.md
.github/workflows/: migrate-legacy-updater-secret.yml  pr-agent.yml  release-desktop-ui.yml  release.yml  review-ack.yml  worker-deploy.yml  worker-rollback.yml
cli/: package.json
cli/scripts/: issue-543-live-runner.ts
cli/src/: account.ts  activity.ts  args.ts  client.ts  codex-app-server-bridge.ts  codex-turn-arbiter.ts  config.ts  continuation.ts  delivery-recovery-journal.ts  format.ts  health-cache.ts  index.ts  instance-lock.ts  json.ts  oidc-cli.ts  reach.ts  rest.ts  upgrade.ts  validation.ts
cli/test/: account-commands.test.ts  account.test.ts  ack.test.ts  activity.test.ts  channel-guard-status.test.ts  channel-retention.test.ts  claude-channel-mcp.test.ts  claude-channel.test.ts  cli.test.ts  client.test.ts  codex-agentparty-bridge.test.ts  codex-app-server-rpc.test.ts  codex-bridge-command.test.ts  codex-delivery-recovery-lane.test.ts  codex-turn-arbiter.test.ts  codex-unix-proxy.test.ts  config.test.ts  daemon.test.ts  decision.test.ts  delivery-recovery-journal.test.ts  format.test.ts  gdpr.test.ts  health-cache.test.ts  history.test.ts  host-board.test.ts  host.test.ts  idempotency.test.ts  instance-stop.test.ts  invite-mode.test.ts  issue-543-live-runner.test.ts  json-contract.test.ts  m3.test.ts  mcp-charter.test.ts  mcp-upgrade-notice.test.ts  mcp-watch-directed-delivery.test.ts  membership.test.ts  mock-server.ts  oidc-mock.ts  reach.test.ts  rest-attachment-download.test.ts  (+30 more)
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: agent.rs  duty.rs  lib.rs
docs/: 2026-07-21-sdk-daemon-residency.html  data-retention-policy.html  data-retention.md  deploy-rollback.md  grok-pool-gateway.md  loops-playbook.md  migrations.md  party-etiquette.md  session-bridge-architecture.html
docs/examples/: grok-pool.authorized-sources.example.json
scripts/: check-aggregate.test.ts  check-migration-numbering.test.ts  check-migration-numbering.ts  ci-paths-filter.test.ts  deploy-ci.test.ts  desktop-adhoc-acceptance.test.ts  desktop-adhoc-acceptance.ts  desktop-pairing-smoke.test.ts  desktop-production-acceptance.test.ts  desktop-production-acceptance.ts  desktop-release-workflow.test.ts  desktop-ui-publication.test.ts  desktop-ui-publication.ts  desktop-ui-release-workflow.test.ts  grok-pool-gateway.test.ts  grok-pool-gateway.ts  grok-pool-server.test.ts  grok-pool-server.ts  install-desktop.test.ts  linuxdo_grok_replenish.py  linuxdo_grok_replenish_test.py  release.sh  review-ack-gate.d.mts  review-ack-gate.mjs  review-ack-gate.test.ts  rollback-ci.test.ts
shared/: package.json
shared/src/: mentions.ts  protocol.ts
skills/agentparty/: SKILL.md
skills/verify-agentparty-change/: SKILL.md
web/: package.json  vite.config.ts
web/src/: 01-api.larkDirectory.test.ts  01-api.memberRemoval.test.ts  App.renewal.test.tsx  App.test.tsx  App.tsx  router.test.ts  router.ts  state.test.ts  state.ts
worker/: package.json  tsconfig.json  vitest.config.ts
worker/migrations/: 0001_init.sql  0005_account_ownership.sql  0006_captures.sql  0021_channel_role_owner_account.sql  0024_task_scope_and_blocked_reason.sql  0028_account_membership.sql  0034_channel_retention.sql  0035_management_audit_agent_nickname.sql  (+5 more)
worker/src/: acl.ts  (+9 more)
(+305 files in other folders)
