[package]
name = "agentparty-desktop"
version = "0.1.0"
description = "AgentParty desktop shell"
authors = ["AgentParty"]
license = "BUSL-1.1"
edition = "2021"

[lib]
name = "agentparty_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = ["tray-icon"] }
tauri-plugin-process = "2"
tauri-plugin-notification = "=2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
url = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

[dev-dependencies]
base64 = "0.22"
minisign-verify = "0.2.5"
