[package]
name = "agentparty-desktop"
version = "0.2.149"
description = "AgentParty desktop shell"
authors = ["AgentParty"]
license = "BUSL-1.1"
edition = "2021"

[lib]
name = "agentparty_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = ["tray-icon"] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "=2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
semver = "1"
flate2 = "1"
base64 = "0.22"
regex = "1"
tar = "0.4"
time = { version = "0.3", features = ["parsing"] }
url = "2"
tokio = { version = "1", features = ["time"] }
minisign-verify = "0.2.5"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
security-framework = "3.7"
security-framework-sys = "2.17"

[dev-dependencies]
tempfile = "3"
